# managed-worker-quickstarts

./: README.md
.github/: dependabot.yml
.github/workflows/: pre-release.yaml
go/: Dockerfile  go.mod  go.sum  main.go
python/: .gitignore  Dockerfile  hatchet.py  pyproject.toml
typescript/: Dockerfile  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
